# ticktick-mcp

./: install.sh  pyproject.toml
src/ticktick_mcp/: auth.py  client.py  dates.py  models.py  resolve.py  server.py
src/ticktick_mcp/resources/: __init__.py  lists.py  profile.py  settings.py
src/ticktick_mcp/tools/: __init__.py  calendar.py  filters.py  focus.py  folders.py  habits.py  projects.py  tags.py  tasks.py
