[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktick-mcp"
version = "0.1.0"
description = "MCP server for interacting with the TickTick API."
authors = [
  { name="jen6", email="work.jen6@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.0",
]

[project.scripts]
ticktick-mcp = "ticktick_mcp.server:main"

[project.urls]
"Homepage" = "https://github.com/pdyxs/ticktick-mcp"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
